--- a/mkdocs.yml
+++ b/mkdocs.yml
@@ -18,3 +18,6 @@ nav:
   - Identity & Federation:
       - Identity: identity/identity.md
       - Identity Federation: identity/identity_federation.md
+  - Exam Preparation
+      - Exam Prep: exam_prep/exam_prep.md
+
