--- a/mkdocs.yml
+++ b/mkdocs.yml
@@ -20,4 +20,6 @@ nav:
       - Identity Federation: identity/identity_federation.md
   - Exam Preparation
       - Exam Prep: exam_prep/exam_prep.md
+  - Networking
+      - Hybrid Networking: network/hybrid_networking.md
 
