--- a/mkdocs.yml
+++ b/mkdocs.yml
@@ -18,8 +18,10 @@ nav:
   - Identity & Federation:
       - Identity: identity/identity.md
       - Identity Federation: identity/identity_federation.md
-  - Exam Preparation
+  - Security:
+      - CloudTrail: security/cloudtrail.md
+      - Keys and Parameters Management: security/keys_parameter_management.md
+  - Exam Preparation:
       - Exam Prep: exam_prep/exam_prep.md
-  - Networking
+  - Networking:
       - Hybrid Networking: network/hybrid_networking.md
-
