--- a/mkdocs.yml
+++ b/mkdocs.yml
@@ -23,7 +23,12 @@ nav:
       - Keys and Parameters Management: security/keys_parameter_management.md
       - Mitigate DDoS Attacks: security/ddos_attacks_mitigation.md
       - Guard Duty: security/guard_duty.md
-  - Exam Preparation:
-      - Exam Prep: exam_prep/exam_prep.md
+      - Inspector & Config: security/inspector_config.md
   - Networking:
       - Hybrid Networking: network/hybrid_networking.md
+  - Storage:
+      - EBS: storage/ebs.md
+      - EFS: storage/efs.md
+      - S3: storage/s3.md
+  - Exam Preparation:
+      - Exam Prep: exam_prep/exam_prep.md
