added cost control section

--- a/mkdocs.yml
+++ b/mkdocs.yml
@@ -45,5 +45,7 @@ nav:
       - Auto-Scaling: computing/autoscaling.md
   - Data Engineering:
       - Data Engineering: data_engineering/data_engineering.md
+  - Cost Control:
+      - Cost Control: cost_control/cost_control.md
   - Exam Preparation:
       - Exam Prep: exam_prep/exam_prep.md
