--- a/mkdocs.yml
+++ b/mkdocs.yml
@@ -24,6 +24,7 @@ nav:
       - Mitigate DDoS Attacks: security/ddos_attacks_mitigation.md
       - Guard Duty: security/guard_duty.md
       - Inspector & Config: security/inspector_config.md
+      - S3 Security: security/s3_security.md
   - Networking:
       - Hybrid Networking: network/hybrid_networking.md
       - VPC: network/vpc.md
