--- a/mkdocs.yml
+++ b/mkdocs.yml
@@ -39,11 +39,12 @@ nav:
   - Migration:
       - Migration: migration/migration.md
   - Computing:
-      - EC2: computing/ec2.md
-      - ECS & Lambda: computing/ecs_lambda.md
-      - Data Management: computing/data_management.md
-      - ELB & API Gateway: computing/elb_apigw_appsync.md
-      - Auto-Scaling: computing/autoscaling.md
+      - EC2: compute/ec2.md
+      - ECS & Lambda: compute/ecs_lambda.md
+      - Data Management: compute/data_management.md
+      - ELB & API Gateway: compute/elb_apigw_appsync.md
+      - Auto-Scaling: compute/autoscaling.md
+      - Elastic Beanstalk: compute/elastic_bean_stalk.md
   - Data Engineering:
       - Data Engineering: data_engineering/data_engineering.md
   - Databases:
@@ -53,5 +54,7 @@ nav:
       - Cost Control: cost_control/cost_control.md
   - Logging:
       - Logging: logging/logging.md
+  - Deployment:
+      - Systems Manager: deployment/systems_manager.md
   - Exam Preparation:
       - Exam Prep: exam_prep/exam_prep.md
