--- a/mkdocs.yml
+++ b/mkdocs.yml
@@ -25,6 +25,7 @@ nav:
       - Guard Duty: security/guard_duty.md
       - Inspector & Config: security/inspector_config.md
       - S3 Security: security/s3_security.md
+      - Certificate Manager: certificate_manager.md
   - Networking:
       - Hybrid Networking: network/hybrid_networking.md
       - VPC: network/vpc.md
@@ -46,6 +47,8 @@ nav:
       - ELB & API Gateway: compute/elb_apigw_appsync.md
       - Auto-Scaling: compute/autoscaling.md
       - Elastic Beanstalk: compute/elastic_bean_stalk.md
+      - AppSync: compute/appsync.md
+      - WorkDocs: compute/workdocs.md
   - Data Engineering:
       - Data Engineering: data_engineering/data_engineering.md
   - Databases:
