--- a/mkdocs.yml
+++ b/mkdocs.yml
@@ -54,6 +54,7 @@ nav:
       - WorkDocs: compute/workdocs.md
       - X-Ray: compute/xray.md
       - Application Auto Scaling: compute/application_auto_scaling.md
+      - Step Functions: compute/step_functions.md
   - Data Engineering:
       - Data Engineering: data_engineering/data_engineering.md
   - Databases:
